Fix top spacing of control-bar

--- a/src/css/control-bar.css
+++ b/src/css/control-bar.css
@@ -1,6 +1,7 @@
 .control-bar {
     display: flex;
-    margin-bottom: 5%;
+    margin-top: 2vh;
+    margin-bottom: 2%;
     padding: 1vh;
     backdrop-filter: blur(2px);
 }
@@ -8,7 +9,7 @@
 .pause {
     float: left;
     color: #007bff;
-    margin-top: 2.5vh;
+    margin-top: 3vh;
     margin-left: 10px;
     height: 4vh;
     width: 4vh;
@@ -19,7 +20,7 @@
     float: left;
     height: 3vh;
     width: 3vh;
-    margin-top: 3vh;
+    margin-top: 3.5vh;
     margin-left: 10px;
     background-color: red;
     display: none;
